# NastAero

./: .gitignore  CLAUDE.md  README.md
solver/: .gitignore  VTOL_Development_Report.docx  pyproject.toml  run_cert_analysis.py  run_oei_recovery_analysis.py  run_oei_transient_plots.py  run_oei_unbalance_study.py  run_vtol_cert_analysis.py
solver/docs/: KC100_Certification_Loads_Report.md  NastAero_Verification_Report.docx
solver/docs/claude_sessions/: MEMORY.md  implementation_plan.md
solver/nastaero/: __init__.py  __main__.py  config.py
solver/nastaero/aero/: __init__.py  airfoil_camber.py  dlm.py  panel.py  spline.py
solver/nastaero/bdf/: __init__.py  bulk_data.py  case_control.py  executive_control.py  field_parser.py  model.py  parser.py
solver/nastaero/elements/: __init__.py  bar.py  base.py  quad4.py  quad8.py  tria3.py  tria6.py
solver/nastaero/fem/: __init__.py  (+6 more)
solver/scripts/: benchmark_results.json  benchmark_scalability.py  collect_verification_data.py  generate_large_model.py  generate_report_figures.py  generate_word_report.py  plot_benchmark_results.py  verification_data.json
solver/tests/: test_aero_cards.py  test_aero_verification.py  test_batch_runner.py  test_bdf_parser.py  test_cert_bridge.py  test_cert_report.py  test_conm2.py  test_elements.py  test_envelope.py  test_fields.py  test_full_aircraft.py  test_higher_order_elements.py  test_kc100_cert_e2e.py  test_load_case_matrix.py  test_nastran_verification.py  test_pcomp.py  test_sol101.py  test_sol103.py  test_sol144.py  test_sol146.py  test_vn_diagram.py  test_vtol_pipeline.py
(+95 files in other folders)
