[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nastaero"
version = "0.2.0"
description = "Open-source structural analysis FEA solver with Nastran BDF I/O and aeroelasticity"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
plot = ["matplotlib>=3.5"]

[project.scripts]
nastaero = "nastaero.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nastaero*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
